finished home and team page

--- a/data/users.yml
+++ b/data/users.yml
@@ -2,3 +2,7 @@
   github_nickname: 'ssaunier'
 - name: 'Boris Paillard'
   github_nickname: 'Papillard'
+- name: 'Marguerite Dorangeon'
+  github_nickname: 'ritedo'
+- name: 'Victor Leboda'
+  github_nickname: 'Victorleboda'
